kubernetes/applications/rembg-nieradko-com/manifests/rembg-nieradko-com-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rembg-nieradko-com-httproute
  namespace: rembg-nieradko-com
spec:
  parentRefs:
    - name: default-gateway
      namespace: kube-system
  hostnames:
    - rembg.nieradko.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rembg-nieradko-com-service
          port: 80
